--- a/visualization/index.html
+++ b/visualization/index.html
@@ -14,6 +14,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.6.0/jszip.min.js"></script>
     <script src="https://d3js.org/topojson.v3.min.js"></script>
     <script type="text/javascript" src="mapView.js"></script>
-
+    <div id="tooltip" style="position: absolute; opacity: 0; background-color: #fff; border: 1px solid #000; padding: 10px; border-radius: 5px; pointer-events: none;"></div>
     
 </body>
