--- a/visualization/index.html
+++ b/visualization/index.html
@@ -9,8 +9,7 @@
 </head>
 
 <body>
-    <script type="text/javascript" src="lib/d3.v5.min.js"></script>
-    <script type="text/javascript" src="lib/d3-dsv.min.js"></script>
+    <script src="https://d3js.org/d3.v6.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.6.0/jszip.min.js"></script>
     <script src="https://d3js.org/topojson.v3.min.js"></script>
     <script type="text/javascript" src="mapView.js"></script>
