--- a/visualization/index.html
+++ b/visualization/index.html
@@ -14,13 +14,22 @@
     <script src="https://d3js.org/topojson.v3.min.js"></script>
     <script src="https://d3js.org/d3-array.v2.min.js"></script>
     <script type="text/javascript" src="mapView.js"></script>
-    <!-- <div id="tooltip" style="position: absolute; opacity: 0; background-color: #fff; border: 1px solid #000; padding: 10px; border-radius: 5px; pointer-events: none;"></div> -->
+
     <div>
         <input type="checkbox" id="SleepHours" name="SleepHours" />
         <label for="SleepHours">Sleep Hours</label>
         <input type="checkbox" id="BMI" name="BMI" />
         <label for="BMI">BMI</label>
+        <input type="checkbox" id="HadStroke" name="HadStroke" />
+        <label for="HadStroke">Had Stroke</label>
+        <input type="checkbox" id="HadDiabetes" name="HadDiabetes" />
+        <label for="HadDiabetes">Had Diabetes</label>
+        <input type="checkbox" id="SmokerStatus" name="SmokerStatus" />
+        <label for="SmokerStatus">Smoking</label>
+        <input type="checkbox" id="HadAsthma" name="HadAsthma" />
+        <label for="HadAsthma">Had Asthma</label>
+
     </div>
     <div id="formContainer" class="flex-container"></div>
-    <script src="modelVisual.js"></script>
+    <script type="text/javascript" src="modelVisual.js"></script>
 </body>
