--- a/visualization/index.html
+++ b/visualization/index.html
@@ -28,6 +28,7 @@
         <label for="SmokerStatus">Smoking</label>
         <input type="checkbox" id="HadAsthma" name="HadAsthma" />
         <label for="HadAsthma">Had Asthma</label>
+        <button type="button" id="test">test</button>
 
     </div>
     <div id="formContainer" class="flex-container"></div>
