--- a/visualization/index.html
+++ b/visualization/index.html
@@ -157,8 +157,8 @@
     <div id="modelContainer">
         <script src="modelVisual.js" type="text/javascript"></script>
     </div>
-    <svg id="temp"> </svg>
-    <svg id="temp2"> </svg>
+    <svg id="weightsvg"> </svg>
+    <svg id="agesvg"> </svg>
     <script src="modelOutput.js"></script>
 </div>
 </body>
