--- a/visualization/index.html
+++ b/visualization/index.html
@@ -49,6 +49,12 @@
         }
 
         .form-title {
+            font-size: 20px;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
+
+        .risk-question {
             font-size: 18px;
             font-weight: bold;
             margin-bottom: 20px;
